--- a/index.html
+++ b/index.html
@@ -453,9 +453,9 @@ body.fp-add-view [data-block-type]:after {
 <footer class="fdb-block footer-large bg-dark fp-active" data-block-type="footers" data-id="8">
   <div class="container">
     <div class="row align-items-top text-center text-md-left">
-      <div class="col-12 col-sm-6 col-md-4"><h3><strong>ELOI USA HQ</strong></h3><p>134 1st Avenue West<br>Kalispell, MT 59901</p><p>1 (406) 890-2626</p><p><a href="mailto:andreyk@eloiusa.com">info@eloiusa.com</a></p></div>
+      <div class="col-12 col-sm-6 col-md-4"><h3><strong>ELOI USA HQ</strong></h3><p>134 1st Avenue West<br>Kalispell, MT 59901</p><p>1 (406) 890-2626</p><p><a href="mailto:info@eloiusa.com">info@eloiusa.com</a></p></div>
 
-      <div class="col-12 col-sm-6 col-md-4 mt-4 mt-sm-0"><h3><strong>ELOI USA Arizona</strong></h3><p>2801 East Camelback Road<br>Phoenix, AZ 85016</p><p>1 (253) 334-6842</p><p><a href="mailto:andreyk@eloiusa.com">andreyk@eloiusa.com</a></p></div>
+      <div class="col-12 col-sm-6 col-md-4 mt-4 mt-sm-0"><h3><strong>ELOI USA Arizona</strong></h3><p>2801 East Camelback Road<br>Phoenix, AZ 85016</p><p>1 (406) 890-2626</p><p><a href="mailto:info@eloiusa.com">info@eloiusa.com</a></p></div>
 
       <div class="col-12 col-md-4 mt-5 mt-md-0 text-md-left"><h3><strong>Simply Create</strong></h3><p>We don't think it should be difficult to create, our goal is to make it simple for you.</p></div>
     </div>
