--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
   )();</script>
 
 <head>
-  <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
+  <link rel='shortcut icon' type='image/x-icon' href='https://raw.githubusercontent.com/wolfpack94/wolfpack94.github.io/master/favicon.ico' />
   <script>(function () {
       function AeFUy() {
         //<![CDATA[
