disable contact form

--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
   <section class="fdb-block bg-dark"
     style="background-image: url(https://cdn.jsdelivr.net/gh/froala/design-blocks@master/dist/imgs//hero/blue.svg);"
     data-block-type="contacts" data-id="6">
-    <div class="container">
+    <!-- <div class="container">
       <div class="row text-center justify-content-center">
         <div class="col-12 col-md-8 col-lg-7">
           <h1>Contact Us</h1>
@@ -599,6 +599,12 @@
               </div>
             </div>
           </form>
+        </div>
+      </div> -->
+      <div class="row text-center justify-content-center">
+        <div class="col-12 col-md-8 col-lg-7">
+          <h1>Contact Us</h1>
+          <h2>Coming Soon!</h2>
         </div>
       </div>
     </div>
